<resources>
    <string name="app_name">appCampeonato</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">REGISTRAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Deportes">Deportes</string>
    <string name="menu_Equipo">Equipos</string>
    <string name="menu_Deportistas">Deportistas</string>
    <string name="TbtnRegistrar">REGISTRAR</string>
    <string name="TxtDocumento">DOCUMENTO</string>
    <string name="TxtNombres">NOMBRES</string>
    <string name="TxtApellidos">APELLIDOS</string>
    <string name="TxtFechaNacimiento">FECHA NACIMIENTO</string>
    <string name="TxtEmail">EMAIL</string>
    <string name="Titulo">CAMPEONATOS DE DEPORTES</string>
    <string name="TxtInfromacion">campeonatoDeportes@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TbtnIngresar">INGRESAR</string>
    <string name="eTxtUsuario">USUARIO</string>
    <string name="eTxtContrasena">CONTRASEÑA</string>


    <string-array name="Equipos">
        <item>@string/suciedad</item>
        <item>@string/birra</item>
        <item>@string/furcia</item>
    </string-array>

    <string name="suciedad">Real Suciedad</string>
    <string name="birra">Aston Birra</string>
    <string name="furcia">Real Furcia</string>
    <string name="eTxtNombres">MARLY GUERRERO</string>

</resources>